--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: hbuilder
-description: "HBuilder - Car Wash Service Management App"
+name: washtron
+description: "Washtron - Car Wash Service Management App"
 publish_to: 'none'
 
 version: 1.0.0+1
@@ -16,32 +16,46 @@ dependencies:
   flutter_svg: ^2.0.10+1
   smooth_page_indicator: ^1.1.0
   carousel_slider: ^5.0.0
+  flutter_screenutil: ^5.9.0
   
   # Firebase
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.0
   cloud_firestore: ^6.0.0
+  firebase_storage: ^13.0.2
+  
+  # Authentication
+  google_sign_in: ^6.2.1
   
   # State Management
   provider: ^6.1.1
   
   # QR/Barcode Scanner
-  qr_code_scanner: ^1.0.1
   mobile_scanner: ^3.5.5
   
   # Location Services
   geolocator: ^10.1.0
   geocoding: ^2.1.1
   
+  # Map
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
+  
   # URL Launcher for calls
   url_launcher: ^6.2.2
   
   # Image handling
   cached_network_image: ^3.3.1
+  image_picker: ^1.0.7
+  image_cropper: ^8.0.2
+  
+  # AI Support
+  google_generative_ai: ^0.2.2
   
   # Utilities
   intl: ^0.19.0
   shared_preferences: ^2.2.2
+  google_fonts: ^6.3.3
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +67,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -91,3 +106,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# App Icon Configuration
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/App Logo/logo.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/App Logo/logo.png"
