--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   # AI Support
   google_generative_ai: ^0.2.2
   
+  # IOT & Bluetooth
+  flutter_blue_plus: ^1.32.12
+  permission_handler: ^11.3.1
+  
   # Utilities
   intl: ^0.19.0
   shared_preferences: ^2.2.2
